After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703057 - Inconsistent behavior selecting a picture for a wallpaper
Inconsistent behavior selecting a picture for a wallpaper
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Background
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Debarshi Ray
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-25 14:11 UTC by celine.LEGUAY
Modified: 2014-07-18 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (2.97 KB, patch)
2013-07-09 13:54 UTC, pnmanolova
rejected Details | Review
background: Fix semi-random placement style when selecting "Picture" (1.18 KB, patch)
2014-07-18 09:58 UTC, Bastien Nocera
committed Details | Review

Description celine.LEGUAY 2013-06-25 14:11:22 UTC
User can notice that system has 2 behaviors depending what wallpaper was set before. Having selected a wallpaper from "Wallpapers", adding an image as background will stretch it, having selected a color from "Colors" will make the picture tile.
Steps :
1. Boot 
2. Have a 1280 x 1024 image in Pictures folder (smaller than native resolution)
3. Go to settings - background
4. Press on background 
5. From the "Wallpapers" tab, select a bluish one and apply
6. Press again on background, go to "Pictures" tab and add the pictures as a wallpaper
7. observe it's mode stretched
8. Press again on background, go to "Colors" tab and select a color and accept it as wallpaper
9. Press again on background and go to "Pictures" tab and add the pictures as a wallpaper
10. Observe now it's "tile" mode (pictures will repeat it self)
Expected outcome
User should be able to select how the image will display
Actual outcome
Image will display stretched / tile depending on what was before
Comment 1 pnmanolova 2013-07-09 13:54:51 UTC
Created attachment 248726 [details] [review]
Proposed patch
Comment 2 Kévin THIERRY 2013-10-22 07:57:25 UTC
Review of attachment 248726 [details] [review]:

Works for me.
Comment 3 Bastien Nocera 2014-07-18 09:53:52 UTC
Review of attachment 248726 [details] [review]:

Using the zoom placement means that it will look different from what it used to, selecting the same picture, and that it doesn't actually fix the root of the problem (which was that the placement wasn't overridden when selecting a background from the pictures source).

::: panels/background/bg-pictures-source.c
@@ +294,3 @@
                      picture_opened_for_read, bg_source);
   g_object_unref (file);
+

Whitespace change here.

::: panels/background/cc-background-item.c
@@ -418,3 @@
 cc_background_item_get_placement (CcBackgroundItem *item)
 {
-	g_return_val_if_fail (CC_IS_BACKGROUND_ITEM (item), G_DESKTOP_BACKGROUND_STYLE_SCALED);

I would have put those changes in a separate commit.
Comment 4 Bastien Nocera 2014-07-18 09:58:14 UTC
Created attachment 281069 [details] [review]
background: Fix semi-random placement style when selecting "Picture"

When selecting a background from the Pictures source, make sure that
the placement is reset from whatever it was set to before, otherwise
it will make use of the previous one, leading to tiled wallpapers if a
colour was selected before, for example.
Comment 5 Bastien Nocera 2014-07-18 16:30:24 UTC
Attachment 281069 [details] pushed as c33e98d - background: Fix semi-random placement style when selecting "Picture"