background: Fix semi-random placement style when selecting "Picture"

When selecting a background from the Pictures source, make sure that
the placement is reset from whatever it was set to before, otherwise
it will make use of the previous one, leading to tiled wallpapers if a
colour was selected before, for example.

https://bugzilla.gnome.org/show_bug.cgi?id=703057